--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "autoprefixer": "^9.5.1",
+    "connected-react-router": "^6.8.0",
+    "history": "^4.9.0",
     "postcss-nested": "^4.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "terser-webpack-plugin": "^4.2.3"
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.1.1",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@ant-design/react-native": "^4.0.6",
@@ -49,6 +54,7 @@
     "precss": "^4.0.0",
     "style-loader": "^2.0.0",
     "svg-sprite-loader": "^5.0.0",
+    "terser-webpack-plugin": "^4.2.3",
     "url-loader": "^4.1.1",
     "webpack": "^4.41.2",
     "webpack-chunk-hash": "^0.6.0",
