--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "autoprefixer": "^9.5.1",
     "connected-react-router": "^6.8.0",
     "history": "^4.9.0",
+    "html2canvas": "^1.0.0-rc.4",
     "postcss-nested": "^4.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-load-on-demand": "^1.0.1",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.1",
